--- a/portafolio.html
+++ b/portafolio.html
@@ -4,34 +4,33 @@
 <head>
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
-    <meta name="description" content="Start your development with Mateo Bonilla.">
-    <meta name="author" content="Devcrud">
-    <title>MateoBonilla Portfolio</title>
+    <meta name="description" content="Portfolio projects by Mateo Bonilla.">
+    <meta name="author" content="Mateo Bonilla">
+    <title data-i18n="portfolio.title">Mateo Bonilla | Portfolio</title>
+
     <!-- font icons -->
     <link rel="stylesheet" href="assets/vendors/themify-icons/css/themify-icons.css">
-    <!-- Bootstrap + MateoB main styles -->
+    <!-- main styles -->
     <link rel="stylesheet" href="assets/css/mateob.css">
-    <!-- <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet" crossorigin="anonymous"> -->
-
-
-
+    <link rel="stylesheet" href="assets/css/i18n.css">
     <link rel="icon" type="image/png" href="./assets/imgs/nite.png">
-
 </head>
 
 <body>
     <header class="header">
         <video autoplay loop muted playsinline class="background-video">
             <source src="./assets/imgs/portafolio.m4v" type="video/mp4">
-            Tu navegador no soporta videos en HTML5.
+            Your browser does not support HTML5 video.
         </video>
         <div class="container">
             <div class="header-content">
-                <h1 class="header-title">NITE</h1>
-                <h6 class="header-mono">Front-End Developer/Designer | Game Developer | Graphic Designer</h6>
+                <h1 class="header-title" data-i18n="portfolio.name">NITE</h1>
+                <h6 class="header-mono" data-i18n="portfolio.subtitle">Front-End Developer | Game Developer | Graphic
+                    Designer</h6>
             </div>
         </div>
     </header>
+
     <nav class="navbar sticky-top navbar-expand-lg navbar-light bg-white" data-spy="affix" data-offset-top="510">
         <div class="container">
             <button class="navbar-toggler ml-auto" type="button" data-toggle="collapse"
@@ -41,33 +40,24 @@
             </button>
             <div class="collapse mt-sm-20 navbar-collapse" id="navbarSupportedContent">
                 <ul class="navbar-nav mr-auto">
-                    <li class="nav-item">
-                        <a href="index.html" class="nav-link">Home</a>
-                    </li>
-                    <!-- <li class="nav-item">
-                        <a href="about.html" class="nav-link">About</a>
-                    </li> -->
-                    <li class="nav-item">
-                        <a href="resume.html" class="nav-link">Resume</a>
-                    </li>
+                    <li class="nav-item"><a href="index.html" class="nav-link" data-i18n="nav.home">Home</a></li>
+                    <li class="nav-item"><a href="resume.html" class="nav-link" data-i18n="nav.resume">Resume</a></li>
                 </ul>
                 <ul class="navbar-nav brand">
-                    <img src="assets/imgs/nite.png" alt="" class="brand-img">
+                    <img src="assets/imgs/nite.png" alt="logo" class="brand-img">
                     <li class="brand-txt">
                         <h5 class="brand-title">Mateo Bonilla</h5>
-                        <div class="brand-subtitle">Web Designer | Game Developer | Graphic Designer</div>
+                        <div class="brand-subtitle" data-i18n="portfolio.brandSubtitle">Web Designer | Game Developer |
+                            Graphic Designer</div>
                     </li>
                 </ul>
                 <ul class="navbar-nav ml-auto">
-                    <li class="nav-item">
-                        <a href="services.html" class="nav-link">Services</a>
+                    <li class="nav-item"><a href="services.html" class="nav-link" data-i18n="nav.services">Services</a>
                     </li>
-                    <li class="nav-item">
-                        <a href="portafolio.html" class="nav-link active">Portfolio</a>
-                    </li>
-                    <li class="nav-item last-item">
-                        <a href="contact.html" class="nav-link">Contact</a>
-                    </li>
+                    <li class="nav-item"><a href="portafolio.html" class="nav-link active"
+                            data-i18n="nav.portfolio">Portfolio</a></li>
+                    <li class="nav-item last-item"><a href="contact.html" class="nav-link"
+                            data-i18n="nav.contact">Contact</a></li>
                 </ul>
             </div>
         </div>
@@ -76,31 +66,25 @@
     <!-- Portfolio Section -->
     <section class="section bg-custom-gray" id="portfolio">
         <div class="container">
-            <h1 class="mb-5"><span class="text-danger">My</span> Portfolio</h1>
+            <h1 class="mb-5"><span class="text-danger" data-i18n="portfolio.my">My</span> <span
+                    data-i18n="portfolio.titleSection">Portfolio</span></h1>
             <div class="portfolio">
                 <div class="filters">
-                    <a href="#" data-filter=".new" class="active">
-                        New
-                    </a>
-                    <a href="#" data-filter=".game">
-                        Game
-                    </a>
-                    <a href="#" data-filter=".web">
-                        Web/App's
-                    </a>
-                    <a href="#" data-filter=".ux">
-                        UX/UI
-                    </a>
-                    <a href="#" data-filter=".design">
-                        Design
-                    </a>
-                    
+                    <a href="#" data-filter=".new" class="active" data-i18n="portfolio.filter.new">New</a>
+                    <a href="#" data-filter=".game" data-i18n="portfolio.filter.game">Game</a>
+                    <a href="#" data-filter=".web" data-i18n="portfolio.filter.web">Web/Apps</a>
+                    <a href="#" data-filter=".ux" data-i18n="portfolio.filter.ux">UX/UI</a>
+                    <a href="#" data-filter=".design" data-i18n="portfolio.filter.design">Design</a>
                 </div>
+
                 <div id="project-description" class="mb-4 text-center text-muted"
-                    style="min-height: 60px; font-style: italic;">
-                    Selecciona una categoría para ver su descripción...
+                    style="min-height: 60px; font-style: italic;" data-i18n="portfolio.selectDescription">
+                    Select a category to see its description...
                 </div>
+
                 <div class="portfolio-container">
+
+                    <!-- Ejemplo de proyecto -->
                     <div class="col-md-6 col-lg-4 game new">
                         <div class="portfolio-item">
                             <a href="fragment.html">
@@ -108,16 +92,18 @@
                                 <div class="content-holder thumbnail">
                                     <div class="text-holder">
                                         <h6 class="title">Fragment</h6>
-                                        <p class="subtitle">MetroidVania 2d</p>
+                                        <p class="subtitle">2D Metroidvania</p>
                                     </div>
                                 </div>
                             </a>
                         </div>
                     </div>
+
                     <div class="col-md-6 col-lg-4 ux new">
                         <div class="portfolio-item">
                             <a href="bgDesignChalenge.html">
-                                <img src="assets/imgs/BG/bgPortada.png" style="background-color:#eea553" class="img-fluid">
+                                <img src="assets/imgs/BG/bgPortada.png" style="background-color:#eea553"
+                                    class="img-fluid">
                                 <div class="content-holder thumbnail">
                                     <div class="text-holder">
                                         <h6 class="title">Design Challenge</h6>
@@ -127,10 +113,12 @@
                             </a>
                         </div>
                     </div>
+
                     <div class="col-md-6 col-lg-4 web new">
                         <div class="portfolio-item">
                             <a href="BiActivate.html">
-                                <img src="assets/imgs/biActivate/logo-activate.png" style="background-color:#eea553" class="img-fluid">
+                                <img src="assets/imgs/biActivate/logo-activate.png" style="background-color:#eea553"
+                                    class="img-fluid">
                                 <div class="content-holder thumbnail">
                                     <div class="text-holder">
                                         <h6 class="title">BIActivate</h6>
@@ -140,6 +128,7 @@
                             </a>
                         </div>
                     </div>
+
                     <div class="col-md-6 col-lg-4 game new">
                         <a href="survival-m.html">
                             <div class="portfolio-item">
@@ -147,12 +136,13 @@
                                 <div class="content-holder thumbnail">
                                     <div class="text-holder">
                                         <h6 class="title">Survival M</h6>
-                                        <p class="subtitle">Game Unity Creation</p>
+                                        <p class="subtitle">Unity Game Creation</p>
                                     </div>
                                 </div>
                             </div>
                         </a>
                     </div>
+
                     <div class="col-md-6 col-lg-4 web new">
                         <a href="dto.html">
                             <div class="portfolio-item">
@@ -160,12 +150,13 @@
                                 <div class="content-holder thumbnail">
                                     <div class="text-holder">
                                         <h6 class="title">Dragon's Trade Off</h6>
-                                        <p class="subtitle">Web app </p>
+                                        <p class="subtitle">Web App</p>
                                     </div>
                                 </div>
                             </div>
                         </a>
                     </div>
+
                     <div class="col-md-6 col-lg-4 design new">
                         <a href="manual-marca.html">
                             <div class="portfolio-item">
@@ -173,54 +164,58 @@
                                 <div class="content-holder thumbnail">
                                     <div class="text-holder">
                                         <h6 class="title">Raw Interactive</h6>
-                                        <p class="subtitle">Manual Desing</p>
+                                        <p class="subtitle">Brand Manual</p>
                                     </div>
                                 </div>
                             </div>
                         </a>
                     </div>
+
                     <div class="col-md-6 col-lg-4 design new">
-                        <div class="portfolio-item">
-                            <a href="taburetes.html">
+                        <a href="taburetes.html">
+                            <div class="portfolio-item">
                                 <img src="assets/imgs/Taburetes/taburetes.jpg" class="img-fluid">
                                 <div class="content-holder thumbnail">
                                     <div class="text-holder">
-                                        <h6 class="title">Taburetes-Sirenas</h6>
+                                        <h6 class="title">Taburetes - Sirenas</h6>
                                         <p class="subtitle">Motion Video</p>
                                     </div>
                                 </div>
-                            </a>
-                        </div>
+                            </div>
+                        </a>
                     </div>
+
                     <div class="col-md-6 col-lg-4 web new">
-                        <div class="portfolio-item">
-                            <a href="dlc.html">
+                        <a href="dlc.html">
+                            <div class="portfolio-item">
                                 <img src="assets/imgs/Dlc/dlc.jpg" class="img-fluid">
                                 <div class="content-holder thumbnail">
                                     <div class="text-holder">
                                         <h6 class="title">DLC (Dragon Learning Center)</h6>
-                                        <p class="subtitle">Mobile App in play Store</p>
+                                        <p class="subtitle">Mobile App</p>
                                     </div>
                                 </div>
-                            </a>
-                        </div>
+                            </div>
+                        </a>
                     </div>
+
                     <div class="col-md-6 col-lg-4 design new">
-                        <div class="portfolio-item">
-                            <a href="foto.html">
+                        <a href="foto.html">
+                            <div class="portfolio-item">
                                 <img src="assets/imgs/Fotografias/portada.jpg" class="img-fluid">
                                 <div class="content-holder thumbnail">
                                     <div class="text-holder">
-                                        <h6 class="title">What remains after love?</h6>
-                                        <p class="subtitle">Photographic series</p>
+                                        <h6 class="title">What Remains After Love?</h6>
+                                        <p class="subtitle">Photographic Series</p>
                                     </div>
                                 </div>
-                            </a>
-                        </div>
+                            </div>
+                        </a>
                     </div>
+
                     <div class="col-md-6 col-lg-4 design new">
-                        <div class="portfolio-item">
-                            <a href="alpina.html">
+                        <a href="alpina.html">
+                            <div class="portfolio-item">
                                 <img src="assets/imgs/Alpina/Alpina.png" class="img-fluid">
                                 <div class="content-holder thumbnail">
                                     <div class="text-holder">
@@ -228,22 +223,21 @@
                                         <p class="subtitle">Stand Design</p>
                                     </div>
                                 </div>
-                            </a>
-                        </div>
+                            </div>
+                        </a>
                     </div>
+
                 </div>
             </div>
         </div>
     </section>
-    <!-- End of portfolio section -->
 
     <footer class="footer py-3">
         <div class="container">
             <p class="small mb-0 text-light">
                 &copy;
-                <script>document.write(new Date().getFullYear())</script> Created With <i
-                    class="ti-heart text-danger"></i> By <a href="#" target="_blank"><span
-                        class="text-danger">MateoB</span></a>
+                <script>document.write(new Date().getFullYear())</script>
+                Created with <i class="ti-heart text-danger"></i> by <span class="text-danger">MateoB</span>
             </p>
         </div>
     </footer>
@@ -258,29 +252,58 @@
         crossorigin="anonymous"></script>
     <!-- Isotope  -->
     <script src="assets/vendors/isotope/isotope.pkgd.js"></script>
+    <!-- i18next -->
+    <script src="https://cdn.jsdelivr.net/npm/i18next@21.6.16/dist/umd/i18next.min.js"></script>
 
     <!-- MateoB js -->
     <script src="assets/js/mateob.js"></script>
-
+    <script src="assets/js/i18n.js"></script>
 
     <script>
+        // Diccionario bilingüe para las descripciones dinámicas
         const descriptions = {
-            ".game": "Projects developed in Unity and other engines, focused on gameplay, art, and narrative design.",
-            ".web": "Web and mobile applications showcasing experience in UX design, frontend development, and frameworks like Angular.",
-            ".ux": "Projects focused on UX/UI design, prototyping, wireframing, and interactive demos that explore visual creativity.",
-            ".design": "Graphic design, branding, animation, and photography projects that explore visual creativity.",
-            ".new": "The latest projects added to this portfolio, covering various areas of work."
-
+            en: {
+                ".game": "Projects developed in Unity and other engines, focused on gameplay, art, and narrative design.",
+                ".web": "Web and mobile applications showcasing experience in UX design, frontend development, and frameworks like Angular.",
+                ".ux": "Projects focused on UX/UI design, prototyping, wireframing, and interactive demos that explore visual creativity.",
+                ".design": "Graphic design, branding, animation, and photography projects that explore visual creativity.",
+                ".new": "The latest projects added to this portfolio, covering various areas of work."
+            },
+            es: {
+                ".game": "Proyectos desarrollados en Unity y otros motores, enfocados en jugabilidad, arte y narrativa.",
+                ".web": "Aplicaciones web y móviles que muestran experiencia en diseño UX, desarrollo frontend y frameworks como Angular.",
+                ".ux": "Proyectos enfocados en diseño UX/UI, prototipado, wireframes y demos interactivas que exploran la creatividad visual.",
+                ".design": "Proyectos de diseño gráfico, branding, animación y fotografía que exploran la creatividad visual.",
+                ".new": "Los proyectos más recientes añadidos a este portafolio, que abarcan diversas áreas de trabajo."
+            }
         };
 
+        // Función para actualizar descripción según idioma y filtro
+        function updateDescription(filterKey) {
+            const currentLang = i18next.language || 'en'; // idioma activo
+            const descBox = document.getElementById('project-description');
+            const text = descriptions[currentLang]?.[filterKey] || '';
+            descBox.textContent = text;
+        }
+
+        // Detectar clics en los filtros
         document.querySelectorAll('.filters a').forEach(filter => {
             filter.addEventListener('click', function () {
                 const filterKey = this.getAttribute('data-filter');
-                const descriptionBox = document.getElementById('project-description');
-                descriptionBox.textContent = descriptions[filterKey] || '';
+                updateDescription(filterKey);
             });
         });
+
+        // Cuando cambia el idioma desde tu script i18n.js, actualizar el texto si ya hay categoría seleccionada
+        document.addEventListener('languageChanged', function () {
+            const activeFilter = document.querySelector('.filters a.active');
+            if (activeFilter) {
+                const filterKey = activeFilter.getAttribute('data-filter');
+                updateDescription(filterKey);
+            }
+        });
     </script>
+
 
 </body>
 
