correccion diseno fragment

--- a/dlc.html
+++ b/dlc.html
@@ -29,12 +29,11 @@
 
         <!-- Página de portada -->
         <div class="page">
-            <div class="image-placeholder">
+            <div>
                 <div class="lookbook-title">
                     <img src="./assets/imgs/Dlc/dlc.png" alt="logo dlc">
                 </div>
             </div>
-
         </div>
         <p class="title">DLC</p>
         <section class="case-wrap">
