--- a/manual-marca.html
+++ b/manual-marca.html
@@ -25,7 +25,7 @@
 
         <!-- Página de portada -->
         <div class="page">
-            <div class="image-placeholder">
+            <div>
                 <div class="lookbook-title"><img src="./assets/imgs/MArca/Marca.png" alt="logo image"></div>
             </div>
         </div>
