rediseño portafolio-bg-dlc

--- a/fragment.html
+++ b/fragment.html
@@ -34,9 +34,9 @@
         </div>
 
         <p class="title" data-i18n="fragment.projectTitle">Fragment - Metroidvania</p>
-<div class="page">
+        <div class="page">
 
-</div>
+        </div>
         <section class="case-wrap">
             <!-- IZQUIERDA: tu “tabla” de labels/valores -->
             <dl class="meta-grid">
@@ -66,10 +66,9 @@
             </div>
         </section>
         <div>
-            <section class="case-wrap">
+            <section class="subtitle">
                 <!-- IZQUIERDA: tu “tabla” de labels/valores -->
-                <dl class="meta-grid">
-                    <dt data-i18n="fragment.description2">Tech & Tools</dt>
+                <dt data-i18n="fragment.description2">Tech & Tools</dt>
 
             </section>
             <div class="tools-icons">
@@ -242,7 +241,7 @@
                     <p class="subtitle" data-i18n="fragment.prototypeTitle">Prototype</p>
                     <div class="image-placeholder">
                         <video autoplay loop muted playsinline class="video"
-                            src="./assets/imgs/Fragment/prototipo.webm"></video>
+                            src="./assets/imgs/Fragment/prototipo.mp4"></video>
                     </div>
                 </div>
 
