--- a/portafolio.html
+++ b/portafolio.html
@@ -73,7 +73,7 @@
                     <a href="#" data-filter=".new" class="active" data-i18n="portfolio.filter.new">New</a>
                     <a href="#" data-filter=".game" data-i18n="portfolio.filter.game">Game</a>
                     <a href="#" data-filter=".web" data-i18n="portfolio.filter.web">Web/Apps</a>
-                    <a href="#" data-filter=".ux" data-i18n="portfolio.filter.ux">UX/UI</a>
+                    <!-- <a href="#" data-filter=".ux" data-i18n="portfolio.filter.ux">UX/UI</a> -->
                     <a href="#" data-filter=".design" data-i18n="portfolio.filter.design">Design</a>
                 </div>
 
@@ -99,7 +99,7 @@
                         </div>
                     </div>
 
-                    <div class="col-md-6 col-lg-4 ux new">
+                    <div class="col-md-6 col-lg-4 web new">
                         <div class="portfolio-item">
                             <a href="bgDesignChalenge.html">
                                 <img src="assets/imgs/BG/bgPortada.png" style="background-color:#eea553"
