--- a/bgDesignChalenge.html
+++ b/bgDesignChalenge.html
@@ -4,109 +4,311 @@
 <head>
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
-    <meta name="description" content="Start your development with Mateo Bonilla.">
-    <meta name="author" content="Devcrud">
-    <title>MateoBonilla Portfolio</title>
+    <meta name="description" content="Banco Guayaquil Design Challenge by Mateo Bonilla.">
+    <meta name="author" content="Mateo Bonilla">
+    <title data-i18n="bg.title">Banco Guayaquil | Design Challenge</title>
+
     <!-- font icons -->
     <link rel="stylesheet" href="assets/vendors/themify-icons/css/themify-icons.css">
-    <!-- Bootstrap + MateoB main styles -->
+    <link rel="stylesheet" href="https://cdn.jsdelivr.net/gh/devicons/devicon@latest/devicon.min.css">
+    <!-- main styles -->
     <link rel="stylesheet" href="assets/css/mateob.css">
     <link rel="stylesheet" href="assets/css/diseno.css">
-    <!-- <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet" crossorigin="anonymous"> -->
+    <link rel="stylesheet" href="assets/css/i18n.css">
+    <link rel="stylesheet" href="assets/css/icons.css">
+
     <link rel="icon" type="image/png" href="./assets/imgs/nite.png">
 </head>
 
 <body>
-    <div class="lookbook ">
+
+    <div class="lookbook">
 
         <!-- Página de portada -->
         <div class="page">
-            <div class="lookbook-title">
-                <img src="./assets/imgs/BG/portada.png" alt="portada bg">
+            <div class="lookbook-title" style="background-color: #0033a0;">
+                <img src="./assets/imgs/BG/portada.png" alt="Banco Guayaquil Challenge cover">
             </div>
         </div>
-        <p class="title">BG Challenge</p>
+
+        <p class="title" data-i18n="bg.projectTitle">BG Design Challenge</p>
+
+        <!-- Información del proyecto -->
         <section class="case-wrap">
-            <!-- IZQUIERDA: tu “tabla” de labels/valores -->
             <dl class="meta-grid">
-                <dt>CATEGORY</dt>
+                <dt data-i18n="bg.categoryTitle">CATEGORY</dt>
                 <dd>
                     <ul class="meta-list">
-                        <li>UX/UI Design</li>
-                        <li>Prototyping</li>
-
+                        <li data-i18n="bg.category1">UX/UI Design</li>
+                        <li data-i18n="bg.category2">Prototyping</li>
                     </ul>
                 </dd>
-                <dt>YEAR</dt>
+
+                <dt data-i18n="bg.yearTitle">YEAR</dt>
                 <dd>2025</dd>
-                <dt>CLIENT</dt>
-                <dd>Banco Guayaquil</dd>
+
+                <dt data-i18n="bg.clientTitle">CLIENT</dt>
+                <dd data-i18n="bg.client">Banco Guayaquil</dd>
             </dl>
+
             <div class="case-desc">
-                <p>
-                    Design and prototyping of a credit card application workflow for a banking app, focused on improving
-                    accessibility and reducing friction. The flow supports both existing app users and non-users.
-                </p>
-                <p>
-                    Tech: Figma (design & prototyping).
+                <p data-i18n="bg.description1">
+                    Design and prototyping of a credit card application workflow for Banco Guayaquil’s mobile app,
+                    focused on improving accessibility and reducing user friction. The flow supports both current app
+                    users and new customers.
                 </p>
                 <a class="view-link"
                     href="https://www.figma.com/design/sSj54yGlHD0i9uZiWVBYzK/BG-Design-Challenge?node-id=7376-199&t=CcHgUSDeVNd36XFc-1"
-                    target="_blank" rel="noopener">view the
-                    website</a>
+                    target="_blank" rel="noopener" data-i18n="bg.viewProject">View Prototype</a>
             </div>
         </section>
-        <div class="page">
-            <p class="subtitle">Work Flow</p>
-            <div class="image-placeholder"><img src="./assets/imgs/BG/worflow1.png" alt="Home Page Bi Activate"> </div>
-            <div class="image-placeholder"><img src="./assets/imgs/BG/worflow2.png" alt="Home Page Bi Activate"> </div>
-            <div class="image-placeholder"><img src="./assets/imgs/BG/2 worflow1.png" alt="Home Page Bi Activate">
-            </div>
-            <div class="image-placeholder"><img src="./assets/imgs/BG/2workflow2.png" alt="Home Page Bi Activate">
+        <div>
+            <section class="subtitle">
+                <!-- IZQUIERDA: tu “tabla” de labels/valores -->
+                <dt data-i18n="fragment.description2">Tech & Tools</dt>
+
+            </section>
+            <div class="tools-icons">
+                <img src="https://cdn.jsdelivr.net/gh/devicons/devicon@latest/icons/figma/figma-original.svg"
+                    width="50 px" title="Figma" />
+                <i class="devicon-illustrator-plain colored" title="Adobe Illustrator"></i>
             </div>
         </div>
-    </div>
+        <!-- Sección: Objetivos -->
+        <p class="title" data-i18n="bg.objectivesTitle">Project Objectives</p>
+        <section class="objectives-section">
+            <div class="objectives-container">
+                <div class="objective-card">
+                    <h3 class="objective-category" data-i18n="bg.objective1.title">Proposal</h3>
+                    <ul>
+                        <li data-i18n="bg.objective1.item1">Simplify the credit card application process.</li>
+                        <li data-i18n="bg.objective1.item2">Enhance user accessibility within the banking ecosystem.
+                        </li>
+                        <li data-i18n="bg.objective1.item3">Provide a seamless experience for both new and existing
+                            customers.</li>
+                    </ul>
+                </div>
+
+                <div class="objective-card">
+                    <h3 class="objective-category" data-i18n="bg.objective2.title">Research</h3>
+                    <ul>
+                        <li data-i18n="bg.objective2.item1">Analyze user pain points in traditional credit application
+                            flows.</li>
+                        <li data-i18n="bg.objective2.item2">Identify UX gaps and opportunities for improvement.</li>
+                        <li data-i18n="bg.objective2.item3">Collect qualitative insights from mobile banking users.</li>
+                    </ul>
+                </div>
+
+                <div class="objective-card">
+                    <h3 class="objective-category" data-i18n="bg.objective3.title">Product</h3>
+                    <ul>
+                        <li data-i18n="bg.objective3.item1">Design an intuitive, step-by-step digital flow for credit
+                            card requests.</li>
+                        <li data-i18n="bg.objective3.item2">Integrate UI consistency with Banco Guayaquil’s branding.
+                        </li>
+                        <li data-i18n="bg.objective3.item3">Develop a clickable prototype for usability testing.</li>
+                    </ul>
+                </div>
+            </div>
+        </section>
+        <p class="title" data-i18n="bg.designProcessTitle">Design Process</p>
+
+        <div class="page">
+            <!-- RESEARCH -->
+            <section class="research-section">
+                <p class="subtitle" data-i18n="bg.researchTitle">Research</p>
+
+                <div class="research-content">
+                    <div class="research-text">
+                        <h4 class="research-subtitle" data-i18n="bg.keyFindingsTitle">Key Findings</h4>
+                        <ul class="research-list">
+                            <li data-i18n="bg.keyFinding1">
+                                Complex processes for applying for a credit card.
+                            </li>
+                            <li data-i18n="bg.keyFinding2">
+                                Lack of accessibility for users who are not Banco Guayaquil clients.
+                            </li>
+                            <li data-i18n="bg.keyFinding3">
+                                Process available only through the website.
+                            </li>
+                        </ul>
+
+                        <h4 class="research-subtitle" data-i18n="bg.methodologyTitle">Methodology</h4>
+                        <p class="research-method" data-i18n="bg.methodology">Design System</p>
+                    </div>
+
+                    <div class="research-stats">
+                        <div class="stat-card">
+                            <h3>50+</h3>
+                            <p data-i18n="bg.stat1">Responses in quantitative survey</p>
+                        </div>
+                        <div class="stat-card">
+                            <h3>20</h3>
+                            <p data-i18n="bg.stat2">Interviews with real users</p>
+                        </div>
+                        <div class="stat-card">
+                            <h3>20+</h3>
+                            <p data-i18n="bg.stat3">Users who tested the prototype</p>
+                        </div>
+                    </div>
+                </div>
+            </section>
+
+            <!-- DEFINITION -->
+            <section class="research-section">
+                <p class="subtitle" data-i18n="bg.definitionTitle">Definition</p>
+
+                <div class="research-content">
+                    <div class="research-text">
+                        <h4 class="research-subtitle" data-i18n="bg.projectTitle2">The Project</h4>
+                        <ul class="research-list">
+                            <li data-i18n="bg.projectItem1">
+                                The main goal of the redesign is to create a new mobile app feature that simplifies the
+                                credit card application process.
+                            </li>
+                            <li data-i18n="bg.projectItem2">
+                                The functionality must serve both Banco Guayaquil clients and non-clients.
+                            </li>
+                        </ul>
+                    </div>
+                </div>
+            </section>
+
+            <!-- IDEATION -->
+            <section class="research-section">
+                <p class="subtitle" data-i18n="bg.ideationTitle">Ideation</p>
+
+                <div class="research-content">
+                    <div class="research-text">
+                        <h4 class="research-subtitle" data-i18n="bg.storyTitle">Concept</h4>
+                        <ul class="research-list">
+                            <li data-i18n="bg.storyItem1">
+                                Ease of use, intuitiveness, and a friendly design.
+                            </li>
+                        </ul>
+                    </div>
+                </div>
+            </section>
+            <br>
+        </div>
+
+        <!-- Sección: Diseño del flujo -->
+        <p class="title" data-i18n="bg.workflowTitle">Workflow Design</p>
+        <div class="page">
+            <p class="subtitle" data-i18n="bg.workflowSubtitle">Application Flow</p>
+            <div class="image-placeholder">
+                <img src="./assets/imgs/BG/worflow1.png" alt="workflow screen 1">
+            </div>
+            <div class="image-placeholder">
+                <img src="./assets/imgs/BG/worflow2.png" alt="workflow screen 2">
+            </div>
+            <div class="image-placeholder">
+                <img src="./assets/imgs/BG/2 worflow1.png" alt="workflow screen 3">
+            </div>
+            <div class="image-placeholder">
+                <img src="./assets/imgs/BG/2workflow2.png" alt="workflow screen 4">
+            </div>
+        </div>
+        <p class="subtitle" data-i18n="bg.prototypeTitle">Prototype</p>
+        <div class="image-placeholder figma-embed">
+            <iframe
+                src="https://embed.figma.com/proto/sSj54yGlHD0i9uZiWVBYzK/BG-Design-Challenge?node-id=7376-200&p=f&scaling=scale-down&content-scaling=fixed&page-id=7376%3A199&starting-point-node-id=7376%3A200&show-proto-sidebar=1&embed-host=share"
+                allowfullscreen></iframe>
+        </div>
+        <!-- Sección: Resultados -->
+        <section class="research-section">
+            <p class="subtitle" data-i18n="bg.resultsTitle">Results</p>
+            <div class="research-content">
+                <div class="objective-card">
+                    <h4 class="research-subtitle" data-i18n="bg.resultsDescription">
+                        The final prototype provides a faster, more intuitive application process. Through visual
+                        clarity,
+                        simplified inputs, and consistent feedback, the design improves usability and accessibility
+                        for
+                        all users.
+                    </h4>
+                    <ul>
+                        <li data-i18n="bg.resultItem1">Enhanced task completion speed by 30% (based on test
+                            feedback).
+                        </li>
+                        <li data-i18n="bg.resultItem2">Improved perceived trust through visual hierarchy and
+                            spacing.
+                        </li>
+                        <li data-i18n="bg.resultItem3">Prototype validated with user tests and iteration cycles in
+                            Figma.</li>
+                    </ul>
+                </div>
+            </div>
+        </section>
+
+        <!-- Sección: Próximos pasos -->
+        <section class="objectives-section">
+            <div class="objectives-container">
+                <div class="objective-card">
+                    <h3 class="objective-category" data-i18n="bg.challengesTitle">Challenges and Learnings</h3>
+                    <p class="research-subtitle" data-i18n="bg.challengesDescription" style="font-size: 16px;">
+                        Creating a financial UX that feels human-centered was both challenging and rewarding.
+                        Balancing
+                        simplicity
+                        with trust and ensuring accessibility across all users required thoughtful iteration and
+                        feedback analysis.
+                    </p>
+                </div>
+
+                <div class="objective-card">
+                    <h3 class="objective-category" data-i18n="bg.nextStepsTitle">Next Steps</h3>
+                    <ul>
+                        <li data-i18n="bg.nextStep1">Conduct A/B testing with real users to optimize onboarding
+                            performance.</li>
+                        <li data-i18n="bg.nextStep2">Extend the design system to additional product flows (loans,
+                            accounts).</li>
+                        <li data-i18n="bg.nextStep3">Collaborate with developers for implementation in Banco
+                            Guayaquil’s
+                            mobile app.</li>
+                    </ul>
+                </div>
+            </div>
+        </section>
+        <br>
     </div>
 
     <footer class="footer py-3">
         <div class="container">
             <p class="small mb-0 text-light">
                 &copy;
-                <script>document.write(new Date().getFullYear())</script> Created With <i
-                    class="ti-heart text-danger"></i>
-                By <a href="#" target="_blank"><span class="text-danger">MateoB</span></a>
+                <script>document.write(new Date().getFullYear())</script> Created With
+                <i class="ti-heart text-danger"></i> By <a href="#" target="_blank"><span
+                        class="text-danger">MateoB</span></a>
             </p>
         </div>
     </footer>
 
-    <a class="flecha-flotante" href='biActivate.html';>
+    <a class="flecha-flotante" href='biActivate.html'>
         <i class="ti-angle-double-left"></i>
     </a>
-    <a class="flecha-flotante-right" href='foto.html'>
+    <a class="flecha-flotante-right" href='fragment.html'>
         <i class="ti-angle-double-right"></i>
     </a>
+
     <a class="projects" href="portafolio.html">
-        <div class="btn btn-outline-danger">
-            Projects
-        </div>
+        <div class="btn btn-outline-danger" data-i18n="bg.projects">Projects</div>
     </a>
 
-    <!-- core  -->
+    <!-- core -->
     <script src="assets/vendors/jquery/jquery-3.4.1.js"></script>
     <script src="assets/vendors/bootstrap/bootstrap.bundle.js"></script>
-
-    <!-- bootstrap 3 affix -->
     <script src="assets/vendors/bootstrap/bootstrap.affix.js"></script>
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js"
         crossorigin="anonymous"></script>
-    <!-- Isotope  -->
     <script src="assets/vendors/isotope/isotope.pkgd.js"></script>
 
+    <!-- i18next -->
+    <script src="https://cdn.jsdelivr.net/npm/i18next@21.6.16/dist/umd/i18next.min.js"></script>
 
-    <!-- MateoB js -->
+    <!-- scripts -->
     <script src="assets/js/mateob.js"></script>
+    <script src="assets/js/i18n.js"></script>
 
-    <script src="assets/js/dragons.js"></script>
 </body>
 
 </html>
