--- a/dlc.html
+++ b/dlc.html
@@ -4,124 +4,313 @@
 <head>
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
-    <meta name="description" content="Start your development with Mateo Bonilla.">
-    <meta name="author" content="Devcrud">
-    <title>MateoBonilla Portfolio</title>
-    <!-- font icons -->
+    <meta name="description" content="Dragon Learning Center mobile app by Mateo Bonilla.">
+    <meta name="author" content="Mateo Bonilla">
+    <title data-i18n="dlc.title">DLC | Mateo Bonilla</title>
+
+    <!-- Font icons -->
     <link rel="stylesheet" href="assets/vendors/themify-icons/css/themify-icons.css">
-    <!-- Bootstrap + MateoB main styles -->
+    <link rel="stylesheet" href="https://cdn.jsdelivr.net/gh/devicons/devicon@latest/devicon.min.css">
+    <!-- Main styles -->
     <link rel="stylesheet" href="assets/css/mateob.css">
     <link rel="stylesheet" href="assets/css/diseno.css">
-    <!-- <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet" crossorigin="anonymous"> -->
-
-    <!-- modal -->
-    <link rel="stylesheet" href="assets/css/modal.css">
-    <link rel="stylesheet" href="assets/css/modalmensaje.css">
-    <link rel="stylesheet" href="assets/css/dragons.css">
+    <link rel="stylesheet" href="assets/css/icons.css">
+    <link rel="stylesheet" href="assets/css/i18n.css">
 
     <link rel="icon" type="image/png" href="./assets/imgs/nite.png">
-
 </head>
 
 <body>
 
     <div class="lookbook">
 
-        <!-- Página de portada -->
+        <!-- Cover Page -->
         <div class="page">
             <div>
-                <div class="lookbook-title">
-                    <img src="./assets/imgs/Dlc/dlc.png" alt="logo dlc">
+                <div class="lookbook-title" style="background-color: #0a0a0a;">
+                    <img src="./assets/imgs/Dlc/dlc.png" alt="DLC cover">
                 </div>
             </div>
+
         </div>
-        <p class="title">DLC</p>
+
+        <p class="title" data-i18n="dlc.projectTitle">Dragon Learning Center (DLC)</p>
+
+        <!-- Metadata Section -->
         <section class="case-wrap">
-            <!-- IZQUIERDA: tu “tabla” de labels/valores -->
             <dl class="meta-grid">
-                <dt>CATEGORY</dt>
+                <dt data-i18n="dlc.categoryTitle">CATEGORY</dt>
                 <dd>
                     <ul class="meta-list">
-                        <li>App Development</li>
-                        <li>UX/UI Design</li>
-                        <li>Mobile</li>
+                        <li data-i18n="dlc.category1">App Development</li>
+                        <li data-i18n="dlc.category2">UX/UI Design</li>
+                        <li data-i18n="dlc.category3">Mobile</li>
                     </ul>
                 </dd>
-                <dt>YEAR</dt>
+
+                <dt data-i18n="dlc.yearTitle">YEAR</dt>
                 <dd>2024</dd>
 
+                <dt data-i18n="dlc.clientTitle">CLIENT</dt>
+                <dd data-i18n="dlc.client">USFQ (Universidad San Francisco de Quito)</dd>
             </dl>
+
             <div class="case-desc">
-                <p>
-                    Dragon Learning Center is a mobile application for scheduling tutoring sessions in specific
-                    subjects, designed for USFQ students. Users can sign up as either tutors or students, browse
-                    availability, and book appointments easily.
+                <p data-i18n="dlc.description1">
+                    Dragon Learning Center is a mobile app that allows USFQ students to schedule tutoring sessions in
+                    specific subjects. Users can sign up as tutors or students, view available slots, and easily book
+                    appointments.
                 </p>
-                <p>
-                    Tech stack: Angular, Ionic Framework, TypeScript, SCSS, JavaScript, HTML5, Firebase (backend), Figma
-                    and Adobe Illustrator (design & prototyping).
+                <p data-i18n="dlc.description2">
+                    Tech stack: Angular, Ionic Framework, TypeScript, SCSS, JavaScript, HTML5, Firebase (backend),
+                    Figma, and Adobe Illustrator (design & prototyping).
                 </p>
                 <a class="view-link"
                     href="https://play.google.com/store/apps/details?id=com.dlc.dragonlearningcenter&pli=1"
-                    target="_blank" rel="noopener">view the
-                    website</a>
+                    target="_blank" rel="noopener" data-i18n="dlc.viewLink">
+                    View on Play Store
+                </a>
             </div>
         </section>
+
+        <!-- Tools -->
+        <section class="subtitle">
+            <dt data-i18n="dlc.toolsTitle">Tech & Tools</dt>
+        </section>
+        <div class="tools-icons">
+            <i class="devicon-angular-plain colored" title="Angular"></i>
+            <i class="devicon-ionic-original colored" title="Ionic"></i>
+            <i class="devicon-typescript-plain colored" title="TypeScript"></i>
+            <i class="devicon-firebase-plain colored" title="Firebase"></i>
+            <i class="devicon-illustrator-plain colored" title="Adobe Illustrator"></i>
+            <i class="devicon-figma-plain colored" title="Figma"></i>
+        </div>
+
+        <!-- Video -->
+        <p class="title" data-i18n="dlc.demoTitle">Demo Video</p>
         <div class="page">
-            <div>
-                <p class="subtitle"> Demo Video</p>
-                <div class="image-placeholder"><video autoplay loop muted playsinline class="video"
-                        src="./assets/imgs/Dlc/dlc.m4v"></video>
-                </div>
-            </div>
-            <div>
-                <p class="subtitle"> Mobile</p>
-                <div class="image-placeholder"><img src="./assets/imgs/Dlc/mobile.png" alt="mobile images">
-                </div>
-                <div class="image-placeholder"><img src="./assets/imgs/Dlc/mobile2.png" alt="mobile images">
-                </div>
+            <div class="image-placeholder">
+                <video autoplay loop muted playsinline class="video" src="./assets/imgs/Dlc/dlc.m4v"></video>
             </div>
         </div>
+        <!-- Objectives -->
+        <p class="title" data-i18n="dlc.objectivesTitle">Project Objectives</p>
+        <section class="objectives-section">
+            <div class="objectives-container">
+                <div class="objective-card">
+                    <h3 class="objective-category" data-i18n="dlc.objective1Title">Accessibility</h3>
+                    <ul>
+                        <li data-i18n="dlc.objective1Item1">Allow students to easily schedule tutoring sessions through
+                            a user-friendly mobile interface.</li>
+                        <li data-i18n="dlc.objective1Item2">Ensure all users can access the app regardless of device or
+                            technical level.</li>
+                    </ul>
+                </div>
+
+                <div class="objective-card">
+                    <h3 class="objective-category" data-i18n="dlc.objective2Title">Efficiency</h3>
+                    <ul>
+                        <li data-i18n="dlc.objective2Item1">Simplify the process of connecting tutors and students.</li>
+                        <li data-i18n="dlc.objective2Item2">Automate scheduling and notifications for both roles.</li>
+                    </ul>
+                </div>
+
+                <div class="objective-card">
+                    <h3 class="objective-category" data-i18n="dlc.objective3Title">Community</h3>
+                    <ul>
+                        <li data-i18n="dlc.objective3Item1">Promote academic collaboration and peer learning within the
+                            university.</li>
+                        <li data-i18n="dlc.objective3Item2">Create a trusted system where tutors gain visibility and
+                            credibility.</li>
+                    </ul>
+                </div>
+            </div>
+        </section>
+
+        <!-- Design Process -->
+        <p class="title" data-i18n="dlc.designProcessTitle">Design Process</p>
+
+        <div class="page">
+            <section class="research-section">
+                <p class="subtitle" data-i18n="dlc.researchTitle">Research</p>
+                <div class="research-content">
+                    <div class="research-text">
+                        <h4 class="research-subtitle" data-i18n="dlc.keyFindingsTitle">Key Findings</h4>
+                        <ul class="research-list">
+                            <li data-i18n="dlc.keyFinding1">Students faced difficulty finding available tutors quickly.
+                            </li>
+                            <li data-i18n="dlc.keyFinding2">Manual scheduling was time-consuming and often led to
+                                miscommunication.</li>
+                            <li data-i18n="dlc.keyFinding3">Users wanted a unified platform for tutoring management.
+                            </li>
+                        </ul>
+
+                        <h4 class="research-subtitle" data-i18n="dlc.methodologyTitle">Methodology</h4>
+                        <p class="research-method" data-i18n="dlc.methodology">Design Thinking + User Interviews</p>
+                    </div>
+
+                    <div class="research-stats">
+                        <div class="stat-card">
+                            <h3>60+</h3>
+                            <p data-i18n="dlc.stat1">Survey Responses</p>
+                        </div>
+                        <div class="stat-card">
+                            <h3>15</h3>
+                            <p data-i18n="dlc.stat2">User Interviews</p>
+                        </div>
+                        <div class="stat-card">
+                            <h3>10+</h3>
+                            <p data-i18n="dlc.stat3">Usability Tests</p>
+                        </div>
+                    </div>
+                </div>
+            </section>
+
+            <section class="research-section">
+                <p class="subtitle" data-i18n="dlc.definitionTitle">Definition</p>
+                <div class="research-content">
+                    <div class="research-text">
+                        <h4 class="research-subtitle" data-i18n="dlc.projectDefinition">The Project</h4>
+                        <ul class="research-list">
+                            <li data-i18n="dlc.projectItem1">Define a simple and intuitive booking flow for both tutors
+                                and students.</li>
+                            <li data-i18n="dlc.projectItem2">Design clear navigation and visual hierarchy to support
+                                accessibility.</li>
+                        </ul>
+                    </div>
+                </div>
+            </section>
+
+            <section class="research-section">
+                <p class="subtitle" data-i18n="dlc.ideationTitle">Ideation</p>
+                <div class="research-content">
+                    <div class="research-text">
+                        <h4 class="research-subtitle" data-i18n="dlc.storyTitle">Concept</h4>
+                        <ul class="research-list">
+                            <li data-i18n="dlc.storyItem1">Connect learning and teaching in a single, easy-to-use app.
+                            </li>
+                            <li data-i18n="dlc.storyItem2">Design focused on clarity, minimal steps, and visual
+                                feedback.</li>
+                        </ul>
+                    </div>
+                </div>
+            </section>
+
+            <section class="research-section">
+                <p class="subtitle" data-i18n="dlc.designTitle">Design</p>
+                <div class="research-content">
+                    <div class="research-text">
+                        <ul class="research-list">
+                            <li data-i18n="dlc.designItem1">Wireframes and interactive prototypes were created in Figma
+                                to validate flows.</li>
+                            <li data-i18n="dlc.designItem2">User testing guided interface adjustments for usability and
+                                readability.</li>
+                        </ul>
+                    </div>
+                </div>
+            </section>
+        </div>
+        <p class="subtitle" >Wireframe</p>
+        <div class="image-placeholder figma-embed">
+            <iframe src="https://embed.figma.com/design/qSWL043bdA93X2R05o1cv3/Untitled?node-id=0-1&embed-host=share"
+                allowfullscreen loading="lazy">
+            </iframe>
+        </div>
+        <!-- Mobile Screens -->
+        <p class="title" data-i18n="dlc.mobileTitle">Mobile Interface</p>
+        <div class="page">
+            <div class="image-placeholder"><img src="./assets/imgs/Dlc/mobile.png" alt="DLC mobile UI 1"></div>
+            <div class="image-placeholder"><img src="./assets/imgs/Dlc/mobile2.png" alt="DLC mobile UI 2"></div>
+        </div>
+
+
+
+        <!-- Results Section -->
+        <section class="research-section">
+            <p class="subtitle" data-i18n="dlc.resultsTitle">Results</p>
+            <div class="research-content">
+                <div class="objective-card">
+                    <h4 class="research-subtitle" data-i18n="dlc.resultsDescription">
+                        The app successfully streamlined the tutoring process for USFQ students, improving
+                        accessibility, usability, and interaction between tutors and learners. Its intuitive design
+                        enhanced engagement and academic collaboration.
+                    </h4>
+                    <ul>
+                        <li data-i18n="dlc.result1">Students can schedule and track sessions directly from their phones.
+                        </li>
+                        <li data-i18n="dlc.result2">Tutors can manage availability and subjects in real time.</li>
+                        <li data-i18n="dlc.result3">The app encourages collaborative learning through an easy-to-use
+                            interface.</li>
+                    </ul>
+                </div>
+            </div>
+        </section>
+
+        <!-- Challenges Section -->
+        <section class="objectives-section">
+            <div class="objectives-container">
+                <div class="objective-card">
+                    <h3 class="objective-category" data-i18n="dlc.challengesTitle">Challenges & Learnings</h3>
+                    <p class="research-subtitle" style="font-size: 16px;" data-i18n="dlc.challengesDescription">
+                        Developing a mobile app for academic use was a challenge in balancing usability, scalability,
+                        and accessibility. The project reinforced my skills in component-based design, responsive
+                        interfaces, and effective user feedback integration.
+                    </p>
+                    <ul>
+                        <li data-i18n="dlc.challenge1">Integrating Firebase authentication and real-time scheduling.
+                        </li>
+                        <li data-i18n="dlc.challenge2">Designing for both students and tutors with different needs.</li>
+                        <li data-i18n="dlc.challenge3">Ensuring smooth performance on Android and iOS devices.</li>
+                    </ul>
+                </div>
+
+                <div class="objective-card">
+                    <h3 class="objective-category" data-i18n="dlc.nextStepsTitle">Next Steps</h3>
+                    <ul>
+                        <li data-i18n="dlc.next1">Implement notifications and reminders for sessions.</li>
+                        <li data-i18n="dlc.next2">Add analytics to track academic improvement.</li>
+                        <li data-i18n="dlc.next3">Expand to web platform for broader accessibility.</li>
+                    </ul>
+                </div>
+            </div>
+        </section>
+        <br>
     </div>
+
+    <!-- Footer -->
     <footer class="footer py-3">
         <div class="container">
             <p class="small mb-0 text-light">
                 &copy;
                 <script>document.write(new Date().getFullYear())</script> Created With <i
-                    class="ti-heart text-danger"></i>
-                By <a href="#" target="_blank"><span class="text-danger">MateoB</span></a>
+                    class="ti-heart text-danger"></i> By
+                <a href="#" target="_blank"><span class="text-danger">MateoB</span></a>
             </p>
         </div>
     </footer>
 
+    <!-- Navigation -->
     <a class="flecha-flotante" href='taburetes.html'>
         <i class="ti-angle-double-left"></i>
     </a>
     <a class="flecha-flotante-right" href='foto.html'>
         <i class="ti-angle-double-right"></i>
     </a>
+
     <a class="projects" href="portafolio.html">
-        <div class="btn btn-outline-danger">
-            Projects
-        </div>
+        <div class="btn btn-outline-danger" data-i18n="dlc.projects">Projects</div>
     </a>
 
-    <!-- core  -->
+    <!-- Scripts -->
     <script src="assets/vendors/jquery/jquery-3.4.1.js"></script>
     <script src="assets/vendors/bootstrap/bootstrap.bundle.js"></script>
-
-    <!-- bootstrap 3 affix -->
     <script src="assets/vendors/bootstrap/bootstrap.affix.js"></script>
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js"
         crossorigin="anonymous"></script>
-    <!-- Isotope  -->
     <script src="assets/vendors/isotope/isotope.pkgd.js"></script>
-
-
-    <!-- MateoB js -->
+    <script src="https://cdn.jsdelivr.net/npm/i18next@21.6.16/dist/umd/i18next.min.js"></script>
     <script src="assets/js/mateob.js"></script>
-    <script src="assets/js/dragons.js"></script>
-
+    <script src="assets/js/i18n.js"></script>
 </body>
 
 </html>
